--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "spectrum_visualizer"
+rootProject.name = "spectrum-visualizer"
 include ':app'
